--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -195,7 +195,7 @@
 		console.log("map");
 		// var karte=httpGet("https://helloacm.com/api/image-to-base64/?url=https://media.fortniteapi.io/images/map.png?showPOI=true");
 		// console.log(karte);
-		bilder = Object.assign({karte: "https://media.fortniteapi.io/images/map.png?showPOI=true"});
+		bilder = Object.assign({karte: "https://media.fortniteapi.io/images/map.png?showPOI=true"},bilder);
 		inhalt.push(
 		{text: "Current map (Battle Royale)", pageBreak: 'before', fontSize: 30, alignment: 'center', tocItem: true},
 		{text: " "},
