--- a/fnReport/index.html
+++ b/fnReport/index.html
@@ -28,6 +28,14 @@
       <input type="submit">
     </form><br><br>
       
+      <form action="apitest.html">
+        <b>Test the API in case the fnReport spits errors to the console</b><br>
+      Username (from the Fortnite game, not the API): <input type="text" name="user"><br>
+      Language (2-letter-code, like en or de): <input type="text" name="lang"><br>
+      fortniteapi.io API key: <input type="text" name="key"><br>
+      <input type="submit">
+    </form><br><br>
+      
       <form action="poi.html">
         <b>Generate POI image book</b><br>
         Language (2-letter-code, like en or de): <input type="text" name="lang"><br>
