--- a/fnReport/apitest.html
+++ b/fnReport/apitest.html
@@ -15,7 +15,15 @@
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
 -->
-
+<style>
+	img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
+	</style>
+	
+	
 </head>
 
 
