--- a/fnReport/apitest.html
+++ b/fnReport/apitest.html
@@ -82,7 +82,7 @@
 		
 		 // Creative news ==================================================================================================================
     document.write("<h2>Creative News</h2><br>");
-    for(i=0;i<fnbr.news.length;i++) {
+    for(i=0;i<fncreative.news.length;i++) {
      document.write("<h3>"+fncreative.news[i].title+"</h3><h4>"+fncreative.news[i].tabTitle+"</h4>");
       document.write(fncreative.news[i].adspace+"<br>");
       document.write(fncreative.news[i].id+"<br>");
