--- a/erich/index.html
+++ b/erich/index.html
@@ -25,7 +25,7 @@ Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymaini
 3. Hans Peter<br>
 4. Marcel Hawks (verstorben)<br>
 5. Jane Glitter<br>
-6. <br>
+6. Terry Hawks<br>
 7. <br>
 8. <br>
 9. <br>
