--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -39,6 +39,13 @@
         <th><a href="https://mc.oestle.de/dynmap/">https://mc.oestle.de/dynmap/</a></th>
         <th></th>
       </tr>
+      <tr>
+        <th>Craftergang.de</th>
+        <th>craftergang.de</th>
+        <th>1.8</th>
+        <th></th>
+        <th></th>
+      </tr>
       
       
     </table>
