--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -46,6 +46,13 @@
         <th></th>
         <th></th>
       </tr>
+      <tr>
+        <th>Ultimate Lands Testserver</th>
+        <th>ulrich.mineserv.com.br</th>
+        <th>1.16.5</th>
+        <th></th>
+        <th>Testserver für das Ultimate-Lands-Plugin</th>
+      </tr>
       
       
     </table>
