--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -53,6 +53,13 @@
         <th></th>
         <th>Testserver für das Ultimate-Lands-Plugin</th>
       </tr>
+      <tr>
+        <th>Crafted SMP</th>
+        <th>siehe Hinweis</th>
+        <th>1.17.1</th>
+        <th><a href="https://crafted-smp.com/server-map">https://crafted-smp.com/server-map</a></th>
+        <th>Whitelisting erforderlich unter <a href="https://forms.gle/2scA4Diio8SNMZQj6">https://forms.gle/2scA4Diio8SNMZQj6</a></th>
+      </tr>
       
       
     </table>
