--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -60,7 +60,13 @@
         <th><a href="https://crafted-smp.com/server-map">https://crafted-smp.com/server-map</a></th>
         <th>Whitelisting erforderlich unter <a href="https://forms.gle/2scA4Diio8SNMZQj6">https://forms.gle/2scA4Diio8SNMZQj6</a></th>
       </tr>
-      
+      <tr>
+        <th>UnicaCity</th>
+        <th>unicacity.de</th>
+        <th>1.16.5</th>
+        <th><a href="https://unicacity.de/karte">https://unicacity.de/karte</a></th>
+        <th>RP-Server</th>
+      </tr>
       
     </table>
   </body>
