--- a/erich/index.html
+++ b/erich/index.html
@@ -2,6 +2,7 @@
 <html>
   
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,7 +17,7 @@
 
 <body>
 <h1>Erichs Kinder</h1>
-Enth&uuml;llt: 5/56, Stand: 20.09.2021<br>
+Enth&uuml;llt: 6/56, Stand: 20.09.2021<br>
 Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymainia">Twitch</a> / <a href="https://discord.gg/WPf2GGe">Discord</a> / <a href="https://www.youtube.com/user/Rickymainia">YouTube</a> / <a href="https://www.youtube.com/channel/UCAly4ieviprBJLhjHgOxGAg">VOD-Kanal auf YT</a><br>
 <br>
 
