--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -67,6 +67,13 @@
         <th><a href="https://unicacity.de/karte">https://unicacity.de/karte</a></th>
         <th>RP-Server</th>
       </tr>
+      <tr>
+        <th>Rennschnitzel</th>
+        <th>cb.rennschnitzel.de</th>
+        <th>1.17.1</th>
+        <th><a href="http://cb.rennschnitzel.de/map.html">http://cb.rennschnitzel.de/map.html</a></th>
+        <th>Freischaltung erforderlich, Gastrechte vorhanden</th>
+      </tr>
       
     </table>
   </body>
