--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -17,6 +17,7 @@
         <th>Version</th>
         <th>Online-Karten</th>
         <th>Hinweise</th>
+        <th>Fotoalbum</th>
       </tr>
       <tr>
         <th>Unity Life</th>
@@ -24,6 +25,7 @@
         <th>1.16.X</th>
         <th><a href="https://minecraft.ulife.me/UnityLife/Dynmap/Netzwerk/">https://minecraft.ulife.me/UnityLife/Dynmap/Netzwerk/</a></th>
         <th></th>
+        <th>Kommt noch</th>
       </tr>
       <tr>
         <th>Unity Life Modserver</th>
@@ -31,6 +33,7 @@
         <th>The 1.12.2 Pack</th>
         <th></th>
         <th>Technic Launcher benötigt. Dort The 1.12.2 Pack runterladen.</th>
+        <th>Kommt noch</th>
       </tr>
       <tr>
         <th>The Vault</th>
@@ -38,6 +41,7 @@
         <th>1.17.1</th>
         <th><a href="https://mc.oestle.de/dynmap/">https://mc.oestle.de/dynmap/</a></th>
         <th></th>
+        <th>Kommt noch</th>
       </tr>
       <tr>
         <th>Craftergang.de</th>
@@ -45,6 +49,7 @@
         <th>1.8</th>
         <th></th>
         <th></th>
+        <th>Kommt noch</th>
       </tr>
       <tr>
         <th>Ultimate Lands Testserver</th>
@@ -52,6 +57,7 @@
         <th>1.16.5</th>
         <th></th>
         <th>Testserver für das Ultimate-Lands-Plugin</th>
+        <th>Kommt noch</th>
       </tr>
       <tr>
         <th>Crafted SMP</th>
@@ -59,6 +65,7 @@
         <th>1.17.1</th>
         <th><a href="https://crafted-smp.com/server-map">https://crafted-smp.com/server-map</a></th>
         <th>Whitelisting erforderlich unter <a href="https://forms.gle/2scA4Diio8SNMZQj6">https://forms.gle/2scA4Diio8SNMZQj6</a></th>
+        <th></th>
       </tr>
       <tr>
         <th>UnicaCity</th>
@@ -66,6 +73,7 @@
         <th>1.16.5</th>
         <th><a href="https://unicacity.de/karte">https://unicacity.de/karte</a></th>
         <th>RP-Server</th>
+        <th></th>
       </tr>
       <tr>
         <th>Rennschnitzel</th>
@@ -73,6 +81,7 @@
         <th>1.17.1</th>
         <th><a href="http://cb.rennschnitzel.de/map.html">http://cb.rennschnitzel.de/map.html</a></th>
         <th>Freischaltung erforderlich, Gastrechte vorhanden</th>
+        <th>Kommt noch</th>
       </tr>
       
     </table>
