--- a/minecraft-server/foto-unity.html
+++ b/minecraft-server/foto-unity.html
@@ -4,7 +4,13 @@
   <body>
     <h1>Fotos von Unity Life</h1>
     <img src="bilder/unity1.png" width=400>
-    
+    <img src="bilder/unity2.png" width=400>
+    <img src="bilder/unity3.png" width=400>
+    <img src="bilder/unity4.png" width=400>
+    <img src="bilder/unity5.png" width=400>
+    <img src="bilder/unity6.png" width=400>
+    <img src="bilder/unity7.png" width=400>
+    <img src="bilder/unity8.png" width=400>
     
   </body>
 </html>
