--- a/minecraft-server/foto-unity.html
+++ b/minecraft-server/foto-unity.html
@@ -11,6 +11,18 @@
     <img src="bilder/unity6.png" width=400>
     <img src="bilder/unity7.png" width=400>
     <img src="bilder/unity8.png" width=400>
+    <img src="bilder/unity9.png" width=400>
+    <img src="bilder/unity10.png" width=400>
+    <img src="bilder/unity11.png" width=400>
+    <img src="bilder/unity12.png" width=400>
+    <img src="bilder/unity13.png" width=400>
+    <img src="bilder/unity14.png" width=400>
+    <img src="bilder/unity15.png" width=400>
+    <img src="bilder/unity16.png" width=400>
+    <img src="bilder/unity17.png" width=400>
+    <img src="bilder/unity18.png" width=400>
+    <img src="bilder/unity19.png" width=400>
+    <img src="bilder/unity20.png" width=400>
     
   </body>
 </html>
