--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -81,7 +81,7 @@
         <th>1.17.1</th>
         <th><a href="http://cb.rennschnitzel.de/map.html">http://cb.rennschnitzel.de/map.html</a></th>
         <th>Freischaltung erforderlich, Gastrechte vorhanden</th>
-        <th>Kommt noch</th>
+        <th><a href="foto-renn.html">Bilder von Rennschnitzel</a></th>
       </tr>
       
     </table>
