--- a/minecraft-server/foto-renn.html
+++ b/minecraft-server/foto-renn.html
@@ -2,7 +2,7 @@
   
   
   <body>
-    <h1>Fotos von Unity Life</h1>
+    <h1>Fotos von Rennschnitzel</h1>
     <img src="bilder/renn1.png" width=400>
     <img src="bilder/renn2.png" width=400>
     <img src="bilder/renn3.png" width=400>
