--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -48,7 +48,7 @@
         <th>craftergang.de</th>
         <th>1.8</th>
         <th></th>
-        <th></th>
+        <th>Bewerbung erforderlich</th>
         <th>Kommt noch</th>
       </tr>
       <tr>
