--- a/minecraft-server/foto-renn.html
+++ b/minecraft-server/foto-renn.html
@@ -9,6 +9,9 @@
     <img src="bilder/renn4.png" width=400>
     <img src="bilder/renn5.png" width=400>
     <img src="bilder/renn6.png" width=400>
+    <img src="bilder/renn7.png" width=400>
+    <img src="bilder/renn8.png" width=400>
+    <img src="bilder/renn9.png" width=400>
     
     
   </body>
