The Vault Fotos

--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -41,7 +41,7 @@
         <th>1.17.1</th>
         <th><a href="https://mc.oestle.de/dynmap/">https://mc.oestle.de/dynmap/</a></th>
         <th></th>
-        <th>Kommt noch</th>
+        <th><a href="foto-oestle.html">Bilder von The Vault</a></th>
       </tr>
       <tr>
         <th>Craftergang.de</th>
