--- a/minecraft-server/foto-renn.html
+++ b/minecraft-server/foto-renn.html
@@ -12,6 +12,9 @@
     <img src="bilder/renn7.png" width=400>
     <img src="bilder/renn8.png" width=400>
     <img src="bilder/renn9.png" width=400>
+	<img src="bilder/renn10.png" width=400>
+    <img src="bilder/renn11.png" width=400>
+    <img src="bilder/renn12.png" width=400>
     
     
   </body>
