--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -22,7 +22,7 @@
       <tr>
         <th>Unity Life</th>
         <th>minecraft.ulife.me</th>
-        <th>1.17.1</th>
+        <th>1.8 - 1.17.1</th>
         <th><a href="https://minecraft.ulife.me/UnityLife/Dynmap/Netzwerk/">https://minecraft.ulife.me/UnityLife/Dynmap/Netzwerk/</a></th>
         <th></th>
         <th><a href="foto-unity.html">Bilder von Unity Life</a></th>
@@ -46,10 +46,10 @@
       <tr>
         <th>Craftergang.de</th>
         <th>craftergang.de</th>
-        <th>1.8</th>
+        <th>1.8 - 1.17.1</th>
         <th></th>
-        <th>Bewerbung erforderlich</th>
-        <th>Kommt noch</th>
+        <th></th>
+        <th><a href="foto-gang.html">Bilder von Craftergang</a></th>
       </tr>
       <tr>
         <th>Ultimate Lands Testserver</th>
