--- a/minecraft-server/foto-gang.html
+++ b/minecraft-server/foto-gang.html
@@ -2,27 +2,21 @@
   
   
   <body>
-    <h1>Fotos von Unity Life</h1>
-    <img src="bilder/unity1.png" width=400>
-    <img src="bilder/unity2.png" width=400>
-    <img src="bilder/unity3.png" width=400>
-    <img src="bilder/unity4.png" width=400>
-    <img src="bilder/unity5.png" width=400>
-    <img src="bilder/unity6.png" width=400>
-    <img src="bilder/unity7.png" width=400>
-    <img src="bilder/unity8.png" width=400>
-    <img src="bilder/unity9.png" width=400>
-    <img src="bilder/unity10.png" width=400>
-    <img src="bilder/unity11.png" width=400>
-    <img src="bilder/unity12.png" width=400>
-    <img src="bilder/unity13.png" width=400>
-    <img src="bilder/unity14.png" width=400>
-    <img src="bilder/unity15.png" width=400>
-    <img src="bilder/unity16.png" width=400>
-    <img src="bilder/unity17.png" width=400>
-    <img src="bilder/unity18.png" width=400>
-    <img src="bilder/unity19.png" width=400>
-    <img src="bilder/unity20.png" width=400>
+    <h1>Fotos von Craftergang</h1>
+    <img src="bilder/gang1.png" width=400>
+    <img src="bilder/gang2.png" width=400>
+    <img src="bilder/gang3.png" width=400>
+    <img src="bilder/gang4.png" width=400>
+    <img src="bilder/gang5.png" width=400>
+    <img src="bilder/gang6.png" width=400>
+    <img src="bilder/gang7.png" width=400>
+    <img src="bilder/gang8.png" width=400>
+    <img src="bilder/gang9.png" width=400>
+    <img src="bilder/gang10.png" width=400>
+    <img src="bilder/gang11.png" width=400>
+    <img src="bilder/gang12.png" width=400>
+    <img src="bilder/gang13.png" width=400>
+    
     
   </body>
 </html>
