--- a/minecraft-server/index.html
+++ b/minecraft-server/index.html
@@ -9,7 +9,7 @@
     
   </head>
   <body>
-    Stand: 14.10.2021<br>
+    Stand: 14.10.2021<br>HINWEIS: Diese Serverliste darf keinesfalls direkt auf einem Minecraft-Server gepostet werden, da das als unerlaubte Werbung für andere Server ausgelegt werden kann.<br>
     <table>
       <tr>
         <th>Name</th>
