--- a/erich/index.html
+++ b/erich/index.html
@@ -23,17 +23,18 @@
 
 <body>
 <h1>Erichs Kinder</h1>
-Enth&uuml;llt: 6/56, Stand: 20.09.2021<br>
+Enth&uuml;llt: 7/56, Stand: 08.12.2021<br>
 Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymainia">Twitch</a> / <a href="https://discord.gg/WPf2GGe">Discord</a> / <a href="https://www.youtube.com/user/Rickymainia">YouTube</a> / <a href="https://www.youtube.com/channel/UCAly4ieviprBJLhjHgOxGAg">VOD-Kanal auf YT</a><br>
 <br>
 
+<h2> Leibliche Kinder</h2>
 1. Steve Röhrich (verstorben)<br>
 2. Xiaomeng Zhang<br>
 3. Hans Peter<br>
 4. Marcel Hawks (verstorben)<br>
 5. Jane Glitter<br>
 6. Terry Hawks<br>
-7. <br>
+7. Ivar (Nachname unbekannt)<br>
 8. <br>
 9. <br>
 10. <br>
@@ -83,5 +84,8 @@ Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymaini
 54. <br>
 55. <br>
 56. <br>
+
+<h2>Adoptierte Kinder</h2>
+- Jenny (Nachname unbekannt)<br>
 
 <p style="color:white;">Unity Erich - Wir sind eine Familie</p>
