--- a/erich/index.html
+++ b/erich/index.html
@@ -86,6 +86,6 @@ Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymaini
 56. <br>
 
 <h2>Adoptierte Kinder</h2>
-- Jenny (Nachname unbekannt)<br>
+- Jenny Jenson<br>
 
 <p style="color:white;">Unity Erich - Wir sind eine Familie</p>
