--- a/satoshitime/index.html
+++ b/satoshitime/index.html
@@ -30,7 +30,7 @@
     </script>
   </head>
   <body>
-    <div id="blockheight">Please wait...</div>
+    <h1><div id="blockheight">Please wait...</div></h1>
     
   </body>
 </html>
