--- a/erich/index.html
+++ b/erich/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-<h1>Erichs Kinder</h1>
-Enth&uuml;llt: 7/56, Stand: 08.12.2021<br>
-Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymainia">Twitch</a> / <a href="https://discord.gg/WPf2GGe">Discord</a> / <a href="https://www.youtube.com/user/Rickymainia">YouTube</a> / <a href="https://www.youtube.com/channel/UCAly4ieviprBJLhjHgOxGAg">VOD-Kanal auf YT</a><br>
+<h1>Dieses Projekt ist beendet!</h1>
+Enth&uuml;llt: 7/56, Stand: 28.04.2023<br>
+Rick Erich war eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymainia">Twitch</a> / <a href="https://discord.gg/WPf2GGe">Discord</a> / <a href="https://www.youtube.com/user/Rickymainia">YouTube</a> / <a href="https://www.youtube.com/channel/UCAly4ieviprBJLhjHgOxGAg">VOD-Kanal auf YT</a><br>
 <br>
 
 <h2> Leibliche Kinder</h2>
